--- a/style.css
+++ b/style.css
@@ -1,110 +1,73 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+@import url('https://fonts.googleapis.com/css2?family=Zeyada&display=swap');
+
+
+
 
 body {
-    background-color: #f9f6f2;
-    font-family: 'Arial', sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-size: 1000px;
+  background-image: url("https://www.psdgraphics.com/wp-content/uploads/2022/01/white-math-paper-texture.jpg");
+  background-position: center center;
 }
 
-.container {
-    text-align: center;
-    position: relative;
+.paper {
+  background-image: url("https://i0.wp.com/textures.world/wp-content/uploads/2018/10/2-Millimeter-Paper-Background-copy.jpg?ssl=1");
+  background-size: 500px;
+  background-position: center center;
+  padding: 20px 100px;
+/*  min-width: 800px; */
+  
+  transform: rotateZ(-5deg);
+  box-shadow: 1px 15px 20px 0px rgba(0,0,0,0.5);
+  
+  position: absolute;
 }
 
-.envelope {
-    position: relative;
-    width: 300px;
-    height: 180px;
-    background-color: #f4c7b8;
-    border-radius: 15px;
-    overflow: hidden;
-    animation: openEnvelope 2s forwards;
+.paper.heart {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  padding: 0;
+  border-radius: 50%;
 }
 
-.flap-top,
-.flap-bottom {
-    position: absolute;
-    width: 100%;
-    height: 50%;
-    background-color: #f4c7b8;
-    transition: all 1s ease;
+.paper.image {
+  padding: 10px;
+}
+.paper.image p {
+  font-size: 30px;
 }
 
-.flap-top {
-    top: 0;
-    transform: translateY(0);
+img {
+  max-height: 200px;
+  width: 100%;
+  user-select: none;
 }
 
-.flap-bottom {
-    bottom: 0;
-    transform: translateY(0);
+.paper.heart::after {
+  content: "";
+  background-image: url('https://cdn.pixabay.com/photo/2016/03/31/19/25/cartoon-1294994__340.png');
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-size: 150px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  opacity: 0.6;
 }
 
-.letter {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 50%;
-    transform: translateY(-50%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
-    animation: revealLetter 2s 2s forwards;
-}
-
-.letter-content {
-    font-size: 24px;
-    color: #f36c6c;
-    font-weight: bold;
-    opacity: 1;
-    transform: translateY(20px);
-}
-
-.butterfly {
-    position: absolute;
-    top: -50px;
-    opacity: 0;
-    animation: flyButterflies 5s infinite;
-}
-
-@keyframes openEnvelope {
-    0% {
-        top: 0;
-    }
-    50% {
-        top: 0;
-    }
-    100% {
-        top: -100%;
-    }
-}
-
-@keyframes revealLetter {
-    0% {
-        opacity: 0;
-        transform: translateY(50px);
-    }
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-@keyframes flyButterflies {
-    0% {
-        opacity: 0;
-        transform: translateX(0) translateY(0) rotate(0deg);
-    }
-    100% {
-        opacity: 1;
-        transform: translateX(200px) translateY(-200px) rotate(720deg);
-    }
+p {
+  font-family: 'Zeyada';
+  font-size: 50px;
+  color: rgb(0,0,100);
+  opacity: 0.75;
+  user-select: none;
+  
+  /* filter: drop-shadow(2px 1.5px 1px rgba(0,0,105,0.9)); */
 }
